# slam_components

./: .gitignore  CMakeLists.txt  build.sh  clang_format.sh
checkpoints/: droid_cnet.pt  droid_fnet.pt
cmake/: find_deps.cmake
configs/eruco/: calibration.yaml  mh02.yaml
configs/eruco/camera/: cam0.json  cam0.yaml  cam1.json  cam1.yaml
configs/eruco/imu/: imu0.yaml
gui/: sparse_map_gui.py
pybind/: CMakeLists.txt  slamcpts_binds.cpp
pybind/test/: class_test.py  mp_test.py  sparse_map_test.py
slam_components/: CMakeLists.txt
slam_components/apps/: CMakeLists.txt  change_dem.cpp  cudnn_test.cpp  eruco_val.cpp  seq_data_test.cpp  test_proj.cpp
slam_components/include/calibration/: calibration.h  camera.h  common.h  imu.h  sensor.h
slam_components/include/components/: common.h  detector.h  frame.h  local_mapping.h  sensor_data.h  system.h  tracking.h
slam_components/include/components/network/: network.h  utils.h
slam_components/include/components/network/droid/: corr.h
slam_components/include/components/network/droid_net/: corr.h  droid_net.h  utils.h
slam_components/include/components/network/superpoint/: superpoint_impl.h  superpoint_net.h
slam_components/include/components/utils/: type_utils.h
slam_components/include/sparse_map/: ceres_func.h  common.h  dem.h  feature.h  frame.h  polygon2d.h  sparse_map.h
slam_components/include/utils/: cereal_utils.h  io_utils.h  log_utils.h
slam_components/src/calibration/: calibration.cpp  camera.cpp  imu.cpp  sensor.cpp
slam_components/src/components/: detector.cpp  frame.cpp  local_mapping.cpp  system.cpp  tracking.cpp
slam_components/src/components/network/: droid_net.cpp  network.cpp  utils.cpp
slam_components/src/components/network/droid/: corr.cpp  corr_kernels.cu  droid_net.cpp
slam_components/src/components/network/droid_net/: corr.cpp  corr_kernels.cu  droid_net.cpp  utils.cpp
slam_components/src/components/network/superpoint/: superpoint_impl.cpp  superpoint_net.cpp
slam_components/src/sparse_map/: dem.cpp  detector.cpp  feature.cpp  frame.cpp  matcher.cpp  polygon2d.cpp  sparse_map.cpp
slam_components/src/utils/: log_utils.cpp
sparse_map/: CMakeLists.txt
sparse_map/apps/: CMakeLists.txt  seq_data_test.cpp
sparse_map/include/sparse_map/: ceres_func.h  common.h  detector.h  feature.h  frame.h  matcher.h  sparse_map.h
sparse_map/src/: common.cpp  detector.cpp  feature.cpp  frame.cpp  matcher.cpp  sparse_map.cpp
test/: CMakeLists.txt  torch_script.cpp
